--- a/public/css/pdf.css
+++ b/public/css/pdf.css
@@ -1,11 +1,22 @@
-body {
-    font-size: 0.8rem;
-    padding: 0;
-    margin: 0;
+@page {
+    size: A4;
+    margin: 20mm;
 }
 
-@page {
-    margin: 6mm
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.container-fluid {
+    width: 210mm;
+    max-width: 210mm;
+    padding-left: 0;
+    padding-right: 0;
+    margin: auto;
 }
 
 .company-logo {
@@ -46,4 +57,9 @@ body {
     tfoot {
         display: table-footer-group;
     }
+}
+
+.product-title-cell {
+    word-wrap: break-word;
+    max-width: 100%;
 }
